# Codis

./: .dockerignore  .gitignore  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  README.md  README.zh.md  entrypoint.sh  file_stats.sh  opencode-cpp-design.md  plan.md  vcpkg.json  多线程模型.md
.local/usr/include/: sqlite3.h
.local/usr/lib/x86_64-linux-gnu/: libsqlite3.so.0.8.6
.local/usr/lib/x86_64-linux-gnu/pkgconfig/: sqlite3.pc
.local/usr/share/lintian/overrides/: pkg-config
.local/usr/share/pkgconfig/personality.d/: x86_64-linux-gnu.personality
bot/: feishu_bot.py  test_feishu.py
config/: config.toml
plugins/: echo_plugin.c
scripts/: build.sh
